--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "node server.js"
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "Peter Durham",
@@ -14,5 +14,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
